# subscriber

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  create_base.py  docker-compose.yml  prepare-display.sh  pyproject.toml  pyptoject.toml  requirements.txt  run-app.sh  run-celery.sh  run.sh  start.sh  start_bot.py  start_crawler.py  start_listener.py  start_notifier.py  stop.sh
.github/workflows/: deploy.yml  tests.yml
all_subscriptions_bot/: bot.py  database.py  handlers.py  trackers.py  updaters.py  utils.py
services/: docker-compose.yml
services/crawler/: Dockerfile  entrypoint.py
services/main/: Dockerfile  main.py  router.py  slack-webhook.py  tg.py
subscriber/: base.py  bot.py  celery.py  channels.py  crud.py  database.py  entrypoints.py  models.py  ops.py  settings.py  token.py  trackers.py  utils.py
subscriber/channels/: __init__.py  base.py  grand_challenge.py  kaggle.py  songkick.py  twitter.py  vk.py  youtube.py
subscriber/destinations/: __init__.py  interface.py  slack_bot.py  slack_webhook.py  tg.py
subscriber/sources/: __init__.py  grand_challenge.py  interface.py  kaggle.py  nitter.py  rss.py  songkick.py  twitter.py  vk.py  youtube.py
tests/: requirements.txt
tests/test_sources/: test_twitter.py
workers/: docker-compose.yml  run-worker.sh
